<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splash_activity_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context="co.borucki.easykanban.view.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@string/splash_activity_logo_content_description"
                android:id="@+id/splash_activity_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/splash_logo" />

        </RelativeLayout>

        <TextView
            android:id="@+id/splash_activity_customized_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/splash_activity_customized_text" />

        <TextView
            android:id="@+id/splash_activity_thanks_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/splash_activity_thanks_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/splash_activity_skip_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/splash_activity_counter_text"
        android:textSize="20sp"
        android:textStyle="bold|italic" />
    <TextView
        android:id="@+id/splash_activity_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"

        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/application_author" />
</RelativeLayout>
