<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/change_password_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/change_password_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_layout_old"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:paddingEnd="16dp"
        android:paddingStart="16dp" />

    <EditText
        android:id="@+id/change_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_layout_new"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:paddingEnd="16dp"
        android:paddingStart="16dp" />

    <EditText
        android:id="@+id/change_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_password_layout_repeat"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:paddingEnd="16dp"
        android:paddingStart="16dp" />
</LinearLayout>