<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.borucki.easykanban.view.MainActivity">
<ImageView
    android:contentDescription="@string/custom_logo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/splash_logo"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp">

            <Button
                android:id="@+id/usedProductButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/main_activity_button_1"
                android:translationZ="0dp" />

            <TextView
                android:id="@+id/usedProductButtonBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/usedProductButton"
                android:layout_alignBottom="@+id/usedProductButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:background="@drawable/badge_circle"
                android:gravity="center"
                android:hint="1"
                android:padding="23dp"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:translationZ="100dp" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp">

            <Button
                android:id="@+id/receivedProductButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/main_activity_button_2"
                android:translationZ="0dp" />

            <TextView
                android:id="@+id/receivedProductButtonBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignBaseline="@+id/receivedProductButton"
                android:layout_alignBottom="@+id/receivedProductButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:background="@drawable/badge_circle"
                android:gravity="center"

                android:hint="2"
                android:padding="23dp"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:translationZ="100dp" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp">

            <Button
                android:id="@+id/messageButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/main_activity_button_3"
                android:translationZ="0dp" />

            <TextView
                android:id="@+id/messageButtonBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignBaseline="@+id/messageButton"
                android:layout_alignBottom="@+id/messageButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:background="@drawable/badge_circle"
                android:gravity="center"

                android:hint="3"
                android:padding="23dp"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:translationZ="100dp" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:padding="16dp">

            <Button
                android:id="@+id/stocktakingProductButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/main_activity_button_4"
                android:translationZ="0dp" />

            <TextView
                android:id="@+id/stocktakingProductButtonBadge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignBaseline="@+id/stocktakingProductButton"
                android:layout_alignBottom="@+id/stocktakingProductButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:background="@drawable/badge_circle"
                android:gravity="center"
                android:hint="4"
                android:padding="23dp"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:translationZ="100dp" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/login_activity_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/application_author" />

</RelativeLayout>
